configure dockerfile and add favicon

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,8 +6,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site for management of products and orders"
+      content="Management App"
     />
+
+    <link rel="icon" href="%PUBLIC_URL%/favicon.webp" />
 
     <title>Reef App</title>
   </head>
